--- a/src/Components/Intro/intro.module.css
+++ b/src/Components/Intro/intro.module.css
@@ -1,7 +1,47 @@
 .headerHighlight {
     color: var(--accent-color);
+    font-family: "Libre Barcode 128 Text", cursive;
 }
 
 .header {
-    font-family: Nosifer;
+    font-family: "Libre Barcode 128 Text", cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 5vw;
+    line-height: 5vw;
+}
+.left {
+    flex: 0 0 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 40px;
+    transform: translateY(-40px);
+}
+.desc {
+    font-size: 16px;
+}
+.descriptionContainer {
+    display: flex;
+    flex-direction: column;
+    width: 77%;
+    gap: 10px;
+}
+.right {
+    flex: 0 0 35%;
+}
+
+.intro {
+    display: flex;
+    width: 90%;
+}
+.imageFooter {
+    width: 100%;
+    border: 1px solid var(--primary-color);
+    margin: 0;
+    transform: translateY(-3px);
+    flex-direction: row;
+    align-items: center;
+    padding: 8px;
+    gap: 10px;
 }
