--- a/src/Components/ProjectCard/projectcard.module.css
+++ b/src/Components/ProjectCard/projectcard.module.css
@@ -9,14 +9,14 @@
     color: white;
 }
 .photoContainer {
-    width: 100%;
+    width: auto;
     height: auto;
 }
 .photo {
-    /* width: 100%; */
-    object-fit: contain;
-    display: block;
+    width: 100%;
+    display: flex;
     aspect-ratio: 16/9;
+    height: fit-content;
 }
 .content {
     width: fit-content;
@@ -24,6 +24,17 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+.inProgress {
+    padding: 1rem;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+.inProgressText {
+    color: white;
 }
 
 .skills {
